--- a/.github/workflows/nextjs-to-github-pages.yml
+++ b/.github/workflows/nextjs-to-github-pages.yml
@@ -19,8 +19,15 @@ jobs:
         with:
           node-version: '14.x'
 
-      - name: Installing my packages
-        run: npm ci
+      - name: Install dependencies
+        run: |
+          if [ -e yarn.lock ]; then
+          yarn install --frozen-lockfile
+          elif [ -e package-lock.json ]; then
+          npm ci
+          else
+          npm i
+          fi
 
       - name: Build my App
         run: npm run build && npm run export && touch ./out/.nojekyll
