--- a/.github/workflows/correcto/nextjs-to-github-pages.yml
+++ b/.github/workflows/correcto/nextjs-to-github-pages.yml
@@ -30,7 +30,7 @@ jobs:
           fi
 
       - name: Build my App
-        run: cd correct && npm run build && npm run export && touch ./out/.nojekyll
+        run: cd correcto && npm run build && npm run export && touch ./out/.nojekyll
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.0
