--- a/.github/workflows/correcto/nextjs-to-github-pages.yml
+++ b/.github/workflows/correcto/nextjs-to-github-pages.yml
@@ -6,7 +6,7 @@ name: GitHub Pages deploy
 on:
   push:
     branches: 
-    - correcto
+    - 'main/correcto'
 
 jobs:
   build:
@@ -31,7 +31,7 @@ jobs:
           fi
 
       - name: Build my App
-        run: cd correcto && npm run build && npm run export && touch ./out/.nojekyll
+        run: npm run build && npm run export && touch ./out/.nojekyll
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.0
